name = rislocalization
version = 0.1.0
description = RIS-based localization error bound utilities
long_description = file: README.md
long_description_content_type = text/markdown
author = Nandini Kariyil Veetil
license = MIT
license_files = LICENSE
url = https://github.com/nandinikv/RISLocalization
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering

[options]
packages = find:
package_dir =
    = src
install_requires =
    numpy>=1.24
    scipy>=1.10
    matplotlib>=3.7
    seaborn>=0.12
    plotly>=5.15

[options.packages.find]
where = src

[tool:pytest]
addopts = -v --disable-warnings
testpaths = tests
